--- a/package.json
+++ b/package.json
@@ -79,13 +79,15 @@
     "axios": "0.26.1",
     "bootstrap": "5.1.3",
     "bootswatch": "5.1.3",
+    "date-fns": "^2.28.0",
     "dayjs": "1.11.0",
     "lodash": "4.17.21",
     "path-browserify": "1.0.1",
     "react": "17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "7.29.0",
+    "react-hook-form": "^7.30.0",
     "react-jhipster": "0.20.0",
     "react-loadable": "5.5.0",
     "react-redux": "7.2.7",
